MAINT: Adding log

--- a/2018-03-11-1826-Sunday.md
+++ b/2018-03-11-1826-Sunday.md
@@ -1,7 +1,15 @@
 # AWS 10000 foot overview
 
+## Compute
+*EC2:
+*EC2 Container Service:
+*Elastic BeanStalk:
+*Lambda
+
+
 * Database Migration Service: Helps you migrate the database
 * Snowball: Storage and migration, To migrate large amount of data
+
 
 ## Network
 * VPC: let you configure your virtual private network, fundamental is very important to pass the exam
