MAINT: Adding log

--- a/2018-03-11-1826-Sunday.md
+++ b/2018-03-11-1826-Sunday.md
@@ -1,12 +1,29 @@
 # AWS 10000 foot overview
 
 ## Compute
-*EC2:
-*EC2 Container Service:
-*Elastic BeanStalk:
-*Lambda
+* EC2:
+* EC2 Container Service:
+* Elastic BeanStalk:
+* Lambda: You control when the code executes. You only worry about the code. 
+* Lightsail: similar to EC2
+* Batch: for batch computing
 
+##  Storage
+* S3: Simple storage service
+* EFS: Elastic File system. Mounting to multiple machiens
+* Glacier: Want to archive the data
+* Snowball: Way to bring large amount of data, use physical way to bring data to AWS cloud
+* Storage gateway: Virtual machines which you install in your datacenter. This will replicate data in the S3.
 
+## Database
+* RDS: Relations Database. Any relational database will be in RDS
+* DynamoDB: Non-relational database
+* ElasticCache: Way to cache data from the common services. Free up database
+* Red Shift: To do complex queries on your system. Data warehousing service
+
+## Migration
+* AWS Migration Hub: A way of tracking service as you migrate to AWS
+* Application Discovery Service: Automated way of finding the application/services
 * Database Migration Service: Helps you migrate the database
 * Snowball: Storage and migration, To migrate large amount of data
 
