MAINT: Adding log

--- a/2018-03-11-1826-Sunday.md
+++ b/2018-03-11-1826-Sunday.md
@@ -62,7 +62,6 @@
 * Managed Services: AWS managed services
 
 ## Media Services
-
 * Elastic Transcoder: It will resize the recordded videos so that it looks good on different services
 * MediaConvert: transcoder
 * MediaLIve: high quality video stream to broadcoast to TV
@@ -71,9 +70,46 @@
 * Media Tailor: Targetted advertizing 
 
 ## Machine Learning
+* SageMaker: makes it really easy for developer to use DEEP LEARNING. 
+* Comprehend: Amazon Comprehend does sentiment analysis across data. Whether pepole are saying good or bad things about the products.
+* DeepLens: Artificial camera which can finds out what is happening in front of the camera. Security... Deeplens is physical device. Camera itself can itself figures out what it is looking at.e.g. Somebody is coming through the door, and the camera can itself figure out whether to open the door or not.
+* Lex: What powers alexa services. it is a way of communicating with the customer, to chat with the customer.
+* Machine learning: It is different from SageMaker ( Deep learning- neural networks). Machine learning ... throw a dataset to the AML and, it will determine outcome on new data. Whenever you login to Amazon, its recommendation is based on Machine learning.
+* Polly: It takes text and turns into speech. These voices sounds like humans... australian, british, indian accents. Just save them in the text editor and then can listen them on our demans. It is a good way to prepare of the exam.
+* Rekognition: You upload a file, and it will tell you what is there in the picture. What all is there in the picture. Rekognition will tell you what it finds in the video.
+* Amazon Translate: Google translatpr
+* Amazon Transcribe: To transcribe our courses  - uploads the video, speech and, it converts to text. You can create a service using polly, rekognition, translate and transcribe.
 
-* SageMaker
-* Comprehend
-* DeepLens: Artificial camera which can finds out what is happening in front of the camera. Security... Deeplens is physical device
-* Lex: What powers alexa services
+
+## Analytics
+* Athena: it allows to let you run SQL across the S3 buckets. Completly serverless and easy to use.
+* EMR: Elastic map reduce. to process large amount of data. big data solutions.
+* CloudSearch: Search services for AWS
+* ElasticSearch Service: Angolia
+* Kinesis: big data specialy, solutions architect specialit. it is a way of communicating with the customer, to chat with the customer.
+* Machine learning: It is different from SageMaker ( Deep learning- neural networks). Machine learning ... throw a dataset to the AML and, it will determine outcome on new data. Whenever you login to Amazon, its recommendation is based on Machine learning.
+* Polly: It takes text and turns into speech. These voices sounds like humans... australian, british, indian accents. Just save them in the text editor and then can listen them on our demans. It is a good way to prepare of the exam.
+* Rekognition: You upload a file, and it will tell you what is there in the picture. What all is there in the picture. Rekognition will tell you what it finds in the video.
+* Amazon Translate: Google translatpr
+* Amazon Transcribe: To transcribe our courses  - uploads the video, speech and, it converts to text. You can create a service using polly, rekognition, translate and transcribe.
+
+
+## Analytics
+* Athena: it allows to let you run SQL across the S3 buckets. Completly serverless and easy to use.
+* EMR: Elastic map reduce. to process large amount of data. big data solutions.
+* CloudSearch: Search services for AWS
+* ElasticSearch Service: Angolia
+* Kinesis: big data specialy, solutions architect speciality. Let you stream large amount of data.
+* Kinesis Video Streams: it is similar to Media services.
+* QuickSight: Amazons business intelligence tool. Its a great BI tool at the fraction of other business intelligence tool.
+* Data Pipeline: It is a way of moving data across the different services.
+* Glue: it is used for ETL.
+
+
+
+
+
+
+
+
 
